# ajax-cli

./: .dockerignore  .gitignore  .jscpd.json  .release-please-manifest.json  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.ajax-web  LICENSE  PRODUCT.md  PWA-IOS-DEBUG-PLAN.md  README.md  RELEASE.md  REVIEW_PLAN.md  SLOP_CLEANUP_PLAN.md  STYLE.md  ai-spaghetti-refactor-plan.md  ajax-critical-high-defects-plan.md  ajax-web-full-control-plan.md  ajax-web-triage-answering-plan.md  api-speed-execution-plan.md  api-speed-plan.md  architecture.md  business-logic-remediation-plan.md  clippy.toml  compose.ajax-web.yml  deny.toml  drop-speed-followup-plan.md  drop-speed-plan.md  live-status-classifier-findings.md  package-lock.json  package.json  post-startup-code-review.md  post-startup-refactor-plan.md  probity.config.ts  release-please-config.json  release-please-remote-build-failure-plan.md  (+2 more)
.cargo/: audit.toml
crates/ajax-cli/: CHANGELOG.md  Cargo.toml
crates/ajax-cli/src/: agent_event.rs  agent_event_notify.rs  agent_hooks.rs  agent_runtime.rs  agent_status_cache.rs  app.rs  attach.rs  bgtmux.rs  classifiers.rs  cli.rs  cockpit_actions.rs  cockpit_backend.rs  context.rs  dispatch.rs  execution_dispatch.rs  lib.rs  main.rs  notify.rs  render.rs  server.rs  snapshot_dispatch.rs  supervise.rs  task_session.rs  web_backend.rs  web_push.rs  web_tls.rs
crates/ajax-cli/src/lib/: tests.rs
crates/ajax-cli/tests/: live_cli.rs  repo_hooks.rs  smoke_user_flows.rs
crates/ajax-cli/web/: app.css  app.js  index.html  manifest.webmanifest  sw.js
crates/ajax-core/: Cargo.toml
crates/ajax-core/proptest-regressions/: commands.txt
crates/ajax-core/src/: adapters.rs  agent_capability.rs  agent_prompt.rs  agent_status.rs  architecture.rs  attention.rs  canonical_agent_event.rs  capability_policy.rs  cockpit.rs  commands.rs  config.rs  events.rs  external_plan.rs  ghost_task.rs  lib.rs  lifecycle.rs  live.rs  live_application.rs  live_recognize.rs  logging.rs  models.rs  operation.rs  operation_regression_tests.rs  output.rs  pane_fallback.rs  policy.rs  recommended.rs  reconcile.rs  registry.rs  remediation.rs  runtime.rs  runtime_refresh.rs  slices.rs  task_operations.rs  ui_state.rs  use_cases.rs  validity.rs
crates/ajax-core/src/adapters/: agent.rs  command.rs  environment.rs  git.rs  github.rs  process.rs  tmux.rs
crates/ajax-core/src/analysis/: git_evidence.rs  mod.rs
crates/ajax-core/src/commands/: check.rs  context.rs  diff.rs  doctor.rs  lookup.rs  merge.rs  new_task.rs  open.rs  orphan_gc.rs  projection.rs  task_state.rs  task_window.rs  teardown.rs  trunk.rs
crates/ajax-core/src/registry/: sqlite.rs
crates/ajax-core/src/registry/sqlite/: migrations.rs
crates/ajax-core/src/slices/: cockpit.rs  drop.rs  pane.rs  remediate.rs  repair.rs  resume.rs  ship.rs  start.rs  task_action.rs  tidy.rs
crates/ajax-core/src/task_operations/: drop_task.rs  kernel.rs  start.rs  sweep_cleanup.rs  task_command.rs
crates/ajax-core/tests/: codex_pane_fixtures.rs
crates/ajax-supervisor/: Cargo.toml
crates/ajax-supervisor/src/: architecture.rs  codex.rs  event_log.rs  lib.rs  process.rs  process_observer.rs  renderer.rs  repo.rs  repo_observer.rs  runtime.rs  status.rs
crates/ajax-supervisor/src/agent/: codex.rs  cursor.rs  mod.rs
crates/ajax-tui/: Cargo.toml
crates/ajax-tui/src/: actions.rs  app.rs  architecture.rs  cockpit_state.rs  facade.rs  input.rs  layout.rs  lib.rs  navigation.rs  palette.rs  render.rs  rendering.rs  runtime.rs
crates/ajax-tui/src/lib/: tests.rs
crates/ajax-web/: Cargo.toml
crates/ajax-web/src/: action_vocabulary.rs  architecture.rs  lib.rs  runtime.rs  runtime_app.rs
crates/ajax-web/src/adapters/: assets.rs  browser_session.rs  cloudflare_access.rs  http.rs  mod.rs  push.rs  server.rs  skills.rs  terminal_pty.rs  tls.rs  tmux_input.rs
crates/ajax-web/src/slices/: actions.rs  attention.rs  cockpit.rs  dev_deploy.rs  install.rs  mod.rs  operate.rs  pane.rs  terminal.rs
crates/ajax-web/web/: MIGRATION_CHECKLIST.md  MODERNIZATION_PLAN.md  TERMINAL.md  TERMINAL_BEHAVIOR_CONTRACT.md  TERMINAL_LEGACY_SURFACE_TESTS.md  TERMINAL_REBUILD_ACCEPTANCE.md  app.css  app.html  app.js  eslint.config.mjs  index.html  manifest.webmanifest  playwright.config.mts  playwright.rust-server.config.mts  svelte.config.mjs  sw.js  tsconfig.check.json  tsconfig.json  vite.config.mts
crates/ajax-web/web/e2e/: actions.test.ts  explore-c4c5-siblings.test.ts  explore-keyboard-blank-jump.test.ts  explore-terminal-visual.test.ts  explore-ui.test.ts  explore-webkit-critical.test.ts  explore-webkit-qa.test.ts  fixtures.ts  fullscreen-refit.test.ts  jwt-adversarial.test.ts  jwt-leak.test.ts  jwtLeakScan.ts  layout-scroll.test.ts  rust-server-assets.test.ts  shell-characterization.test.ts  smoke.test.ts  swipe-reveal.test.ts  terminal-behavior.test.ts  terminal-scroll-garble.test.ts  terminal-scroll.test.ts  terminal-surface-v2.test.ts  terminal-zero-lag.test.ts  visual.test.ts
crates/ajax-web/web/icons/: generate-icons.py
crates/ajax-web/web/src/: api.test.ts  api.ts  cockpitPoll.test.ts  cockpitPoll.ts  contracts.test.ts  contracts.ts  design-colors.test.ts  diagnostics.test.ts  diagnostics.ts  fixtures.test.ts  legacyTerminalRemoval.test.ts  main.ts  main.tsx  polling.test.ts  polling.ts  routes.test.ts  routes.ts  state.test.ts  state.ts  strictMode.test.tsx  styles.css  styles.test.ts  taskActions.ts  taskSlug.ts  terminalClipboard.test.ts  terminalClipboard.ts  terminalConnection.test.ts  terminalConnection.ts  terminalGeometry.fuzz.test.ts  terminalGeometry.test.ts  terminalGeometry.ts  terminalGestures.ts  terminalLayoutPolicy.test.ts  terminalLayoutPolicy.ts  terminalOutputPolicy.test.ts  terminalOutputPolicy.ts  terminalOwnership.test.ts  terminalPreload.test.ts  terminalPreload.ts  terminalRefit.test.ts  (+20 more)
frontends/textual/: ajax_textual.py  ajax_textual_client.py  ajax_textual_layout.py  pyproject.toml  test_ajax_textual.py
frontends/textual/ajax_textual.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+696 files in other folders)
