[workspace]
members = [
    "crates/ajax-cli",
    "crates/ajax-core",
    "crates/ajax-supervisor",
    "crates/ajax-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/mossipcams/ajax-cli"

[workspace.dependencies]
ajax-core = { version = "0.1.0", path = "crates/ajax-core" }
ajax-supervisor = { version = "0.1.0", path = "crates/ajax-supervisor" }
ajax-tui = { version = "0.1.0", path = "crates/ajax-tui" }
clap = "4.5"
crossterm = "0.29"
notify = "8"
proptest = "1.11.0"
ratatui = { version = "0.30", default-features = false }
rstest = "0.26.1"
rusqlite = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1"
toml = "0.9"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
