[package]
name = "ajax-cli"
version = "0.37.11"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["interactive", "supervisor"]
interactive = ["dep:ajax-tui", "dep:nix"]
supervisor = ["dep:ajax-supervisor", "dep:tokio"]

[[bin]]
name = "ajax-cli"
path = "src/main.rs"

[dependencies]
ajax-core = { path = "../ajax-core", version = "0.11.0" }
ajax-supervisor = { path = "../ajax-supervisor", version = "0.11.0", optional = true }
ajax-tui = { path = "../ajax-tui", version = "0.11.0", optional = true }
ajax-web = { path = "../ajax-web", version = "0.11.0" }
clap = { workspace = true }
nix = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time"], optional = true }

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
