[package]
name = "ajax-cli"
version = "0.40.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "ajax-cli"
path = "src/main.rs"

[dependencies]
ajax-core = { path = "../ajax-core", version = "0.11.0" }
ajax-supervisor = { path = "../ajax-supervisor", version = "0.11.0" }
ajax-tui = { path = "../ajax-tui", version = "0.11.0" }
ajax-web = { path = "../ajax-web", version = "0.11.0" }
clap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time"] }

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
