[package]
name = "ajax-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/mossipcams/ajax-cli"

[lints]
workspace = true

[lib]
name = "ajax_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
rust_arkitect = { workspace = true }
