[package]
name = "ajax-core"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ajax_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
rust_arkitect = { workspace = true }
