[package]
name = "ajax-supervisor"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/mossipcams/ajax-cli"

[lints]
workspace = true

[lib]
name = "ajax_supervisor"
path = "src/lib.rs"

[dependencies]
ajax-core = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
rstest = { workspace = true }
