[package]
name = "ajax-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ajax_supervisor"
path = "src/lib.rs"

[dependencies]
ajax-core = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
rstest = { workspace = true }
