[package]
name = "ajax-supervisor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ajax_supervisor"
path = "src/lib.rs"

[dependencies]
ajax-core = { path = "../ajax-core", version = "0.1.0" }
notify = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
rstest = { workspace = true }
rust_arkitect = { workspace = true }
