[package]
name = "ajax-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "ajax_tui"
path = "src/lib.rs"

[dependencies]
ajax-core = { workspace = true }
ratatui = { workspace = true, default-features = false, features = [
    "crossterm",
    "underline-color",
    "layout-cache",
] }
crossterm = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
