[package]
name = "ajax-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/mossipcams/ajax-cli"

[lints]
workspace = true

[lib]
name = "ajax_tui"
path = "src/lib.rs"

[dependencies]
ajax-core = { workspace = true }
ratatui = { workspace = true, default-features = false, features = [
    "crossterm",
    "underline-color",
    "layout-cache",
] }
crossterm = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
