[package]
name = "ajax-web"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ajax-core = { path = "../ajax-core", version = "0.8.0" }
axum = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-rustls = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
web-push = { workspace = true }

[dev-dependencies]
rust_arkitect = { workspace = true }
