[package]
name = "ajax-web"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ajax-core = { path = "../ajax-core", version = "0.11.0" }
axum = { workspace = true }
portable-pty = { workspace = true }
getrandom = { workspace = true }
jsonwebtoken = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-rustls = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
