[project]
name = "ajax-textual"
version = "0.1.0"
description = "Textual cockpit frontend for Ajax CLI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85",
]

[project.scripts]
ajax-textual = "ajax_textual:main"

[tool.setuptools]
py-modules = ["ajax_textual", "ajax_textual_client", "ajax_textual_layout"]
